@@ -3,5 +3,5 @@ use warnings;
 use Test::More;
 eval 'use Test::GreaterVersion';
 plan skip_all => 'Test::GreaterVersion required for this test' if $@;
-has_greater_version_than_cpan('FASTX::Reader');
+has_greater_version_than_cpan('FASTX::Abi');
 done_testing();
